# zero2prod

./: .env  Cargo.toml  config.toml
.github/workflows/: general.yml
migrations/: 20230205032911_create_subscriptions_table.sql
script/: test.sh
scripts/: init_db.sh  init_db_podman.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
