[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Mateo Arteaga <contact@m4rteaga.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.152", features=["derive"]}
sqlx = {version = "0.6.2", default-features=false, features=["runtime-actix-rustls","macros","postgres","uuid","chrono","migrate"]}
config = "0.13.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = {version="0.1.37", features=["log"]}
tracing-subscriber={version="0.3", features=["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = {version="0.8", features=["serde"]}
tracing-actix-web = "0.7.2"


[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
